[project]
name = "eef"
version = "0.1.0"
description = "Official CLI client for evade84 nodes"
authors = [
    {name = "jieggii", email = "jieggii.contact@gmail.com"},
]
dependencies = [
    "typer>=0.4.1",
    "colorama>=0.4.4",
    "shellingham>=1.4.0",
    "requests>=2.27.1",
    "pydantic>=1.9.1",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}
[project.optional-dependencies]

[project.scripts]
eef = "eef.__main__:main"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "isort>=5.10.1",
    "black>=22.3.0",
]

[tool.pdm.scripts]
fmt.shell = "isort eef/ && black eef/"

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
